# medlegal-llm

./: main.py  project_structure.txt  pyproject.toml  requirements.txt  test.py
.cursor/rules/: local-python-ai-app.mdc
src/core/: document_loader.py  document_processor.py  global_settings.py  index_builder.py  query_handler.py  summarizer.py
src/db/: vector_store.py
src/ui/: app.py
src/utils/: ollama_manager.py
