[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medlegal-rag"
version = "0.1.0"
description = "Local RAG assistant for medical‑legal briefs"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "<Your Name>", email = "<you@example.com>" }
]

[project.dependencies]
# Core LLM + retrieval
llama-cpp-python = "~=0.2.76"
chromadb = { version = "~=0.4.21", extras=["all"] }
langchain = "~=0.1.17"

# PDF + OCR
pdfplumber = "~=0.10.4"
layout-parser = { version = "~=0.3.4", extras=["ocr", "tesseract"] }
Pillow = "~=10.3"
# Tesseract installed via OS package manager

# PII detection / redaction
presidiopy = "~=2.3"
medspacy = "~=1.0"
cryptography = "~=42.0"

# Embeddings
sentence-transformers = "~=3.0"
# For E5-small; will auto‑download from HF

tqdm = "~=4.66"
rich = "~=13.7"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
